--- a/Semi-Supervised.ipynb
+++ b/Semi-Supervised.ipynb
@@ -78,7 +78,7 @@
    "source": [
     "# import importlib\n",
     "\n",
-    "from MMHS_dataset import *\n",
+    "from dataset import *\n",
     "from model import SequenceClassification, MODEL_CLASSES\n",
     "from utils import (evaluate, evaluate_metrics, \n",
     "                   save_metrics, load_metrics, predict_ensemble)"
